fixed carousel overflow

--- a/src/components/Works/works.css
+++ b/src/components/Works/works.css
@@ -33,6 +33,10 @@
   box-shadow: 10px 10px 2px #888888;
 } */
 
+.motion-div {
+  overflow-x: hidden;
+}
+
 .works-Container-Images {
   display: flex;
   align-items: center;
